force-app/main/default/objects/City__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>HYPERLINK( &apos;/lightning/r/Market__c/&apos; + Submarket__r.Market__r.Id + &apos;/view&apos; ,  Submarket__r.Market__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>