force-app/main/default/objects/City__c/fields/Onboarding_Process__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Process__c</fullName>
    <label>Onboarding Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Building List</fullName>
            </value>
            <value>
                <fullName>Walk Buildings</fullName>
            </value>
            <value>
                <fullName>Finalize Building List</fullName>
            </value>
            <value>
                <fullName>Create Building Profiles</fullName>
            </value>
            <value>
                <fullName>Upload Directory Photos</fullName>
            </value>
            <value>
                <fullName>Complete Details Tab</fullName>
            </value>
            <value>
                <fullName>Add Vacancies, Sales, Brokers, and Direct Flyers</fullName>
            </value>
            <value>
                <fullName>Add Prospects and Suites</fullName>
            </value>
            <value>
                <fullName>Add Sublease Vacancies and Flyers</fullName>
            </value>
            <value>
                <fullName>Get Floor Plans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>