force-app/main/default/objects/City__c/fields/Stage_Test__c.field-meta.xml
<CustomField>
    <fullName>Stage_Test__c</fullName>
    <label>Stage Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>