force-app/main/default/objects/City__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <label>Submarket</label>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Cities</relationshipLabel>
    <relationshipName>Cities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>